--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/u_so_precious_wen_u_style.css" type="text/css">
+    <meta charset="UTF-8">
+    <title>using heelies to escape my feelies</title>
 </head>
 <body>
+
 
 </body>
 </html>
