--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <title>using heelies to escape my feelies</title>
 </head>
+<h1>
+    <img src="images/1x/Artboard%204.png" alt="Cristina Stanzione">
+</h1>
+
 <body>
-
-
+<!-- Box Juan -->
+<h2>Education</h2>
+    <p>Cab Calloway School of the Arts</p>
+    <p>Graduating Year: 2020</p>
+<!-- Box Too Electric Boogaloo -->
+<h3>Skills</h3>
+    <ul>
+        <li>Adobe Photoshop</li>
+        <li>Adobe Illustrator</li>
+        <li>Adobe InDesign</li>
+        <li>HTML</li>
+        <li>CSS</li>
+    </ul>
+<!-- Box Tree The Prequal Sequal -->
+<h4>Info</h4>
+    <p>459 Greenwood Dr. Wilmington DE 19808</p>
+<!-- Box Phor is clearly the best in the series and ur dumb if you disagree -->
+<h5>Profile</h5>
+    <ul>
+        <li>Independent</li>
+        <li>Has experience working in groups</li>
+    </ul>
 </body>
 </html>
