--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+<link href="css/u_so_precious_wen_u_style.css" rel="stylesheet" type="text/css" />
 <head>
     <meta charset="UTF-8">
     <title>using heelies to escape my feelies</title>
 </head>
 <h1>
-    <img src="images/1x/Artboard%204.png" alt="Cristina Stanzione">
+   <img class="logo" src="images/1x/Artboard%204.png" alt="Cristina Stanzione">
+   <img class="pink" src="images/1x/Artboard%205.png">
+   <img class="veil" src="images/1x/Artboard%209.png">
+   <img class="stripes" src= "images/1x/Artboard%2010.png">
 </h1>
 
 <body>
 <!-- Box Juan -->
-<h2>Education</h2>
+<h1>Education</h1>
     <p>Cab Calloway School of the Arts</p>
     <p>Graduating Year: 2020</p>
 <!-- Box Too Electric Boogaloo -->
-<h3>Skills</h3>
+<h1>Skills</h1>
     <ul>
         <li>Adobe Photoshop</li>
         <li>Adobe Illustrator</li>
@@ -23,10 +27,10 @@
         <li>CSS</li>
     </ul>
 <!-- Box Tree The Prequal Sequal -->
-<h4>Info</h4>
+<h1>Info</h1>
     <p>459 Greenwood Dr. Wilmington DE 19808</p>
 <!-- Box Phor is clearly the best in the series and ur dumb if you disagree -->
-<h5>Profile</h5>
+<h1>Profile</h1>
     <ul>
         <li>Independent</li>
         <li>Has experience working in groups</li>
