why do people start with dual destinies its a continuos story dont start in middle

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
 <!-- Box Juan -->
-<h1>Education</h1>
-    <p>Cab Calloway School of the Arts</p>
-    <p>Graduating Year: 2020</p>
+<h1 class="education">Education</h1>
+    <p class="p1">Cab Calloway School of the Arts</p>
+    <p class="p2">Graduating Year: 2020</p>
 <!-- Box Too Electric Boogaloo -->
-<h1>Skills</h1>
-    <ul>
+<h1 class="skills">Skills</h1>
+    <ul class="sicc">
         <li>Adobe Photoshop</li>
         <li>Adobe Illustrator</li>
         <li>Adobe InDesign</li>
@@ -27,11 +27,11 @@
         <li>CSS</li>
     </ul>
 <!-- Box Tree The Prequal Sequal -->
-<h1>Info</h1>
-    <p>459 Greenwood Dr. Wilmington DE 19808</p>
+<h1 class="info">Info</h1>
+    <p class="send help">459 Greenwood Dr. Wilmington DE 19808</p>
 <!-- Box Phor is clearly the best in the series and ur dumb if you disagree -->
-<h1>Profile</h1>
-    <ul>
+<h1 class="profile">Profile</h1>
+    <ul class="what good qualities??">
         <li>Independent</li>
         <li>Has experience working in groups</li>
     </ul>
