--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="boxy">
 <link href="css/u_so_precious_wen_u_style.css" rel="stylesheet" type="text/css" />
 <head>
     <meta charset="UTF-8">
     <title>using heelies to escape my feelies</title>
 </head>
-<h1>
-   <img class="logo" src="images/1x/Artboard%204.png" alt="Cristina Stanzione">
-   <img class="pink" src="images/1x/Artboard%205.png">
-   <img class="veil" src="images/1x/Artboard%209.png">
-   <img class="stripes" src= "images/1x/Artboard%2010.png">
-</h1>
 
 <body>
+<!-- begining of body-container -->
+<div id="body-container">
+<h1>
+   <img class="logo" src="images/1x/Artboard%204.png" alt="Cristina Stanzione">
+   <img class="pink" src="images/1x/Artboard%203.png">
+   <img class="veil" src="images/1x/Artboard%202.png">
+   <img class="stripes" src= "images/1x/Artboard%2010.png">
+</h1>
 <!-- Box Juan -->
 <h1 class="education">Education</h1>
     <p class="p1">Cab Calloway School of the Arts</p>
@@ -28,12 +30,14 @@
     </ul>
 <!-- Box Tree The Prequal Sequal -->
 <h1 class="info">Info</h1>
-    <p class="send help">459 Greenwood Dr. Wilmington DE 19808</p>
+    <p class="help">459 Greenwood Dr. Wilmington DE 19808</p>
 <!-- Box Phor is clearly the best in the series and ur dumb if you disagree -->
 <h1 class="profile">Profile</h1>
-    <ul class="what good qualities??">
+    <ul class="qualities">
         <li>Independent</li>
         <li>Has experience working in groups</li>
     </ul>
+    </div>
+    <!-- end of body-container -->
 </body>
 </html>
